commit de fou la

--- a/views/connexion.ejs
+++ b/views/connexion.ejs
@@ -9,9 +9,9 @@
     </header>
 
     <div class="form-container">
-    <h1>Connexion 4</h1>
+    <h1>Connexion</h1>
 
-    <form method="post" action="/admin/login">
+    <form method="post" action="/connexion">
 
         <label>Email</label>
         <input type="login" name="login" required>
