--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -173,17 +173,8 @@
   socket.on('chatMessage', (data) => {
     const msg = document.createElement('div');
     msg.classList.add('message');
-
-        const now = new Date();
-    const hours = now.getHours().toString().padStart(2, '0');
-    const minutes = now.getMinutes().toString().padStart(2, '0');
-    const time = `${hours}:${minutes}`;
-
-    msg.innerHTML = `
-    <span class="pseudo">${data.pseudo}:</span>
-    <span class="text">${data.message}</span>
-    <span class="time">${time}</span>
-  ` ;
+    
+    msg.innerHTML = `<span class="pseudo">${data.pseudo}:/spa<n> ${data.message}`;
     messagesDiv.appendChild(msg);
     messagesDiv.scrollTop = messagesDiv.scrollHeight;
   });
