--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -102,6 +102,30 @@
     background: #00b4ff;
     box-shadow: 0 0 25px #00b4ff;
     }
+
+    .message {
+    display: flex;
+    justify-content: space-between; /* met pseudo+message à gauche, heure à droite */
+    align-items: center;
+    margin-bottom: 10px;
+    }
+
+    .message .pseudo {
+    font-weight: bold;
+    color: #ff7800;
+    margin-right: 5px;
+    }
+
+    .message .text {
+    flex: 1; /* prend le reste de l'espace disponible */
+    margin-right: 10px;
+    }
+
+    .message .time {
+    font-size: 0.8rem;
+    color: #aaa;
+    white-space: nowrap;
+    }
   </style>
 </head>
 
