--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -9,7 +9,7 @@
 <div>
     <a href="chat" class="chat">chat</a>
 <% if (user) { %>
-    <a href="/dab" class="dashboard">Dashboard</a>
+    <a href="/dab" class="dashboard">Distributeur</a>
     <a href="/logout" class="logout">Déconnexion</a>
 <% } %>
 
