--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -137,7 +137,7 @@
   <main class="chat-page">
     <div class="chat-container">
 
-      <div class="chat-header">CHAT DE ZINZIN 1</div>
+      <div class="chat-header">CHAT DE ZINZIN</div>
 
       <div class="pseudo-form">
         <input id="pseudo" type="text" placeholder="Ton pseudo" />
@@ -155,10 +155,9 @@
       </div>
     </div>
   </main>
-<!-- 
-  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js" integrity="sha384-4gSxlN...==" crossorigin="anonymous"></script>
 
--->
+    <%- include('./layout/footer.ejs') %>
+
     <script src="/socket.io/socket.io.js"></script>
 <script>
 
